Fix projects page on smaller screen sizes
Beforehand, small videos would be juxtaposed horizontally instead of
stacked vertically. Also, the spoilered solutions for the Game-24 quads
wraooed around in a weird way. The code block was also illegible.

Now, the videos are properly stacked, the quad solutions are forcefully
wrapped onto multiple lines, and the code block is completely hidden.

Added WindowCxt to provide window/screen size for this change. Based
divisions of widths into groups based on bootstrap's.

--- a/src/Projects.css
+++ b/src/Projects.css
@@ -23,6 +23,7 @@ pre {
 
 div.media {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
 }
 
@@ -34,7 +35,7 @@ div.media {
 
 @media (max-width: 500px) {
     .small {
-        width: 100%;
+        width: 90%;
     }
 }
 
@@ -46,7 +47,7 @@ div.media {
 
 @media (max-width: 900px) {
     .large {
-        width: 100%;
+        width: 88%;
     }
 }
 
